# Dioxus-fullstack-Auth

./: .gitignore  Cargo.toml  Dioxus.toml  _Cargo.toml  db.sqlite  input.css  package.json
.cargo/: config.toml
assets/: main.css  tailwind.css
html/: list.html  list.rs
src/: main.rs  request.rs  user.rs
src/backend/: auth_session.rs  db.rs  model.rs  router.rs  server_functions.rs  session.rs
src/components/: add_robot.rs  error_msg.rs  home.rs  login.rs  mod.rs  navbar.rs  profile.rs  register.rs  robots.rs  robots2.rs  style.rs  user.rs
