[package]
name = "webapp"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.2", features = ["router"] }
#sqlx = { version="0.7.0", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ], optional = true }
#reqwest = { version = "0.11", features = ["json", "cookies"] }
anyhow = { version = "1.0.98"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[dependencies.dioxus-free-icons] 
version = "0.9"
features = ["material-design-icons-action", "material-design-icons-home", "material-design-icons-social", "material-design-icons-navigation"]

[dependencies.reqwest]
version = "0.12.15"
features = ["json", "cookies"]

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
